--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Profil Saya</title>
-  </head>
+<head>
+          <title>Profil Saya</title>
+          <link rel="stylesheet" href="style.css">
+</head>
 <body>
-  <!--Konten yang terlihat oleh pengunjung akan di sini -->
+          <div class="kartu-profil">
+          <img src="foto-profil.jpg" alt="foto profil saya">
+          <h1>aji dwi l</h1>
+          <p>Siswa SMA yang tertarik dengan teknologi dan desain. selamat datang di wibsite pertama saya!</p>
+          <a href="https://www.instragram.com/usernameanda">kunjungi instragram saya</a>
+       </div>
 </body>
-</html>
-
-</body></title>
-  </head>
 </html>
